# Adarsh_school

./: .env  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Database/: Database.ts
src-tauri/src/: main.rs
src/Components/: ConfirmationDialog.jsx  EditClassModal.jsx  EditFeeModal.jsx  SideBar.jsx
src/db/: Database.js
src/pages/: About.jsx  AddClass.jsx  ClassEdit.jsx  ClassSearch.jsx  Contact.jsx  DeleteFee.jsx  DeleteStudent.jsx  EditFee.jsx  EditModal.jsx  EditStudent.jsx  FeeRegister.jsx  Home.jsx  Login.jsx  NewFee.jsx  NewSession.jsx  NewStudent.jsx  PrintFee.jsx  PrintFeeDate.jsx  SearchFee.jsx  SearchStudent.jsx
src/styles/: AddClass.css  ClassEdit.css  ClassSearch.css  ConfirmationDialog.css  DeleteFee.css  DeleteStudent.css  EditFee.css  EditFeeModal.css  EditStudent.css  Home.css  Login.css  NewFee.css  NewSession.css  NewStudent.css  PrintFee.css  PrintFeeDate.css  SearchStudent.css  SideBar.css
